--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+body {
+    display: flex;
+    background-color: #0eaeab;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
