--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="d-flex" style="width: 80vw; height: 80vh;">
-    <app-cell></app-cell>
-    <app-cell></app-cell>
-    <app-cell></app-cell>
-</div>
+<app-board></app-board>
