--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -5,7 +5,7 @@
 
     <div class="d-flex flex-column justify-content-sm-between align-items-center">
         <h3>Wanna play with a friend?</h3>
-        <app-start-button></app-start-button>
+        <app-start-button [routerLink]='["/game"]'></app-start-button>
     </div>
 </main>
 
