--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,13 +1,39 @@
 main{
-    border: 1px solid black;
-    height: 80vh;
-    width: 80vw;
+    border: 3px solid #58534c;
+    border-radius: 10px;
+    height: 90vh;
+    width: 90vw;
+}
+
+app-cell{
+    height: 100px;
 }
 
 .board {
-    background-color: #58534c;
     display: grid;
-    grid-template-columns: 20vw 20vw 20vw;
-    grid-gap: 5px;
-    border: 1px solid black;
+    grid-template-columns: 100px 100px 100px;
+    grid-gap: 3px;
+    background-color: #58534c;
+    border: 2px solid #f1d3ab;
+    border-radius: 3px;
+}
+
+.winner-container{
+    height: 10%;
+    width: 100%;
+}
+
+.newgame-button{
+    background-color: #f95842;
+    color: #f1d3ab;
+    border: 2px solid #58534c;
+    border-radius: 2.3vw;
+    width: 150px;
+    height: 7vh;
+    font-size: 4ew !important;
+}
+
+.newgame-button:hover{
+    background-color: #f1d3ab;
+    color: #58534c;
 }
