--- a/src/app/cell/cell.component.css
+++ b/src/app/cell/cell.component.css
@@ -1,9 +1,12 @@
-.cell-button{
+.cell-button {
     background-color: #dbce79;
     color: #58534c;
-    width: 100%;
-    height: 100%;
-    line-height: 100%;
-    font-size: 3vw;
-    margin: 2px;
+    width: 100%; 
+    height: 100%; 
+    font-size: 3.5em !important;
+    border: 0;
+}
+
+.cell-button:hover {
+    background-color: #f1d3ab;
 }
