--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<main class="d-flex flex-column align-items-center justify-content-center">
+    <router-outlet></router-outlet>
+</main>
+
+<footer><a href="https://github.com/queCail" target=”_blank”>&copy; Caique L.</a></footer>
