--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,25 +1,38 @@
-main{
-    border: 3px solid #58534c;
-    border-radius: 10px;
+app-cell{
+    height: 120px;
+}
+
+h1{
+    margin: 15px;
+}
+
+.outter-container{
     height: 90vh;
     width: 90vw;
 }
 
-app-cell{
-    height: 100px;
-}
-
 .board {
     display: grid;
-    grid-template-columns: 100px 100px 100px;
+    grid-template-columns: 120px 120px 120px;
     grid-gap: 3px;
     background-color: #58534c;
-    border: 2px solid #f1d3ab;
+    border: 4px solid #f1d3ab;
     border-radius: 3px;
+    margin: 10px;
+}
+
+.board-winner{
+    display: grid;
+    grid-template-columns: 120px 120px 120px;
+    grid-gap: 3px;
+    background-color: #58534c;
+    border: 4px solid #f95842;
+    border-radius: 3px;
+    margin: 10px;
 }
 
 .winner-container{
-    height: 10%;
+    height: 8.5%;
     width: 100%;
 }
 
@@ -28,12 +41,19 @@ app-cell{
     color: #f1d3ab;
     border: 2px solid #58534c;
     border-radius: 2.3vw;
-    width: 150px;
-    height: 7vh;
-    font-size: 4ew !important;
+    width: 180px;
+    height: 8vh;
+    font-size: 5ew;
+    font-weight: bold;
+    margin-bottom: auto;
 }
 
 .newgame-button:hover{
     background-color: #f1d3ab;
     color: #58534c;
+}
+
+.back-button-container{
+    width: 100%;
+    padding-left: 5%; 
 }
