--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,16 +1,16 @@
-main{
-
-    width: 80vw;
-    height: 80vh;
-}
+/*.outter-conteiner{
+    width: 100%;
+    height: 100%;
+}*/
 
 .title {
     color: #f1d3ab ;
-    font-size: 4vw;
+    font-size: 300%;
     text-shadow: -1px 0 #58534c , 0 1px #58534c, 1px 0 #58534c , 0 -1px #58534c ;
+    margin-bottom: 10%;
 }
 
 h3{
-    margin-bottom: 2vh;
+    margin-bottom: 35%;
     color: #58534c ;  
 }
