--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<main class="d-flex flex-column justify-content-sm-around align-items-center">
+<div class="d-flex flex-column justify-content-sm-around align-items-center">
     <div>
         <h1 class="title">Welcome to TicTacToe</h1>
     </div>
@@ -7,5 +7,5 @@
         <h3>Wanna play with a friend?</h3>
         <app-start-button [routerLink]='["/game"]'></app-start-button>
     </div>
-</main>
+</div>
 
